[package]
name = "actix_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
sea-orm = { version = "0.12.5",features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ]}